@startuml Elevator
[*] --> OnFloor
state Healthy {
[H] -left> Healthy : deep
[*] -> OnFloor
state OnFloor {
[*] -> DoorClosed
state DoorClosed {
}
state DoorOpen {
}
}
OnFloor : entry / AnnounceFloor
OnFloor : exit / Beep
OnFloor : exit / Beep
OnFloor --> DoorClosed : CloseDoor
OnFloor --> DoorOpen : OpenDoor
OnFloor --> MovingUp : GoUp [CheckOverload]
OnFloor : GoUp / AnnounceOverload
OnFloor --> MovingDown : GoDown [CheckOverload]
OnFloor : GoDown / AnnounceOverload
state Moving {
[H] -left> Moving : shallow
[*] -> MovingUp
state MovingUp {
}
state MovingDown {
}
}
Moving --> OnFloor : Stop
}
Healthy --> Error : Error
state Error {
}
Error --> Healthy : Reset
Error : Error
@enduml
